--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
 - name: Check if mailcow installation directory exists
   become: yes
   stat:
-    path: "{{ mailcow__install_path }}"
+    path: "{{ mailcow__install_path }}/.git"
   register: mailcow_installed
 
 - name: Set fact if this is a fresh install
